--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -15,6 +16,8 @@
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.18",
     "autoprefixer": "^10.2.6",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
     "postcss": "^8.3.5",
     "prettier": "2.3.2",
     "tailwindcss": "^2.2.4",
