--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
