--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "axios": "^0.21.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
     "@types/react": "^17.0.18",
-    "@types/react-router-dom": "^5.1.8",
     "autoprefixer": "^10.2.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
