--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.29.0",
+    "@types/nodemailer": "^6.4.4",
     "axios": "^0.21.1",
     "next": "latest",
     "nodemailer": "^6.6.3",
